# Computacao-Grafica

Generator/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Generator.cpp  Generator.h  Generator.sln  Generator.vcxproj  Generator.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  config.xml  config.xml:Zone.Identifier  engine.cpp  tinyxml2.cpp:Zone.Identifier  tinyxml2.h:Zone.Identifier
Generator/Debug/: plane.3d
Generator/Generator.dir/Debug/: Generator.exe.recipe  Generator.ilk
Generator/Generator.dir/Debug/Generator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Generator/builds/: CMakeCache.txt  Generator.vcxproj  ZERO_CHECK.vcxproj  cmake_install.cmake
Generator/builds/Generator.dir/Debug/: Generator.exe.recipe  Generator.ilk
Generator/builds/Generator.dir/Debug/Generator.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog
Generator/builds/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Generator/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
Generator/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
Generator/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Generator/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Generator2/builds/: ALL_BUILD.vcxproj  Generator.sln  Generator.vcxproj.filters  ZERO_CHECK.vcxproj.filters
Generator2/builds/Generator.dir/Debug/Generator.tlog/: CL.write.1.tlog  CustomBuild.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Generator2/builds/Win32/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Generator2/builds/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
